RESOLVED FIXED223404
[JSC] Error#cause should apply to WebAssembly error constructors too
https://bugs.webkit.org/show_bug.cgi?id=223404
Summary [JSC] Error#cause should apply to WebAssembly error constructors too
Ross Kirsling
Reported 2021-03-17 17:23:21 PDT
[JSC] Error#cause should apply to WebAssembly error constructors too
Attachments
Patch (30.15 KB, patch)
2021-03-17 17:28 PDT, Ross Kirsling
no flags
Patch for landing (30.99 KB, patch)
2021-03-17 18:52 PDT, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2021-03-17 17:28:05 PDT
Yusuke Suzuki
Comment 2 2021-03-17 18:15:31 PDT
Comment on attachment 423542 [details] Patch r=me nice
Ross Kirsling
Comment 3 2021-03-17 18:52:17 PDT
Created attachment 423547 [details] Patch for landing
EWS
Comment 4 2021-03-17 19:45:15 PDT
Committed r274609: <https://commits.webkit.org/r274609> All reviewed patches have been landed. Closing bug and clearing flags on attachment 423547 [details].
Radar WebKit Bug Importer
Comment 5 2021-03-17 19:46:25 PDT
Note You need to log in before you can comment on or make changes to this bug.